style(toggle tile): fix high contrast style after app.theme updated

--- a/vtr-ui/src/app/components/widgets/widget-switch-icon/widget-switch-icon.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-switch-icon/widget-switch-icon.component.scss
@@ -44,19 +44,19 @@
 				}
 			}
 		}
-		@media #{$breakpoint_xl2}{
+		@media #{$breakpoint_xl2} {
 			width: 9.6rem;
 		}
-		@media #{$breakpoint_xl}{
+		@media #{$breakpoint_xl} {
 			width: 9.6rem;
 		}
-		@media #{$breakpoint_lg}{
+		@media #{$breakpoint_lg} {
 			width: 12.4rem;
 		}
-		@media #{$breakpoint_md}{
+		@media #{$breakpoint_md} {
 			width: 12.4rem;
 		}
-		@media #{$breakpoint_sm}{
+		@media #{$breakpoint_sm} {
 			width: 12.4rem;
 		}
 
@@ -66,41 +66,48 @@
 
 		&.checked {
 			box-shadow: 0px 0px 0.1rem 0.1rem $go;
-			background: linear-gradient($gradient_angle, $go 0%, $go_light 100%);
+			background: linear-gradient(
+				$gradient_angle,
+				$go 0%,
+				$go_light 100%
+			);
 			// outline: none;
 
-				@media #{$white-on-black} {
-					@include high-contrast-background-transparent;
-					box-shadow: 0px 0px 0.1rem 0.1rem $high-contrast-black-cyan;
-				}
-				@media #{$black-on-white} {
-					@include high-contrast-background-transparent;
-					box-shadow: 0px 0px 0.1rem 0.1rem $high-contrast-white-dark-magenta;
-				}
-
+			@media #{$white-on-black} {
+				@include high-contrast-black-background;
+				box-shadow: none;
+			}
+			@media #{$black-on-white} {
+				@include high-contrast-white-background;
+				box-shadow: none;
+			}
 
 			.title {
 				color: $light;
 				@media #{$white-on-black} {
-					@include  high-contrast-black-text-color;
+					color: $dark;
 				}
 				@media #{$black-on-white} {
-					@include high-contrast-white-text-color;
+					color: $light;
 				}
 			}
 
 			.icon-container {
-				background: linear-gradient($gradient_angle_reverse, $go 0%, $go_lighter 100%);
+				background: linear-gradient(
+					$gradient_angle_reverse,
+					$go 0%,
+					$go_lighter 100%
+				);
 				color: $light;
 				@media #{$white-on-black} {
-					@include  high-contrast-black-text-color;
+					color: $dark;
 					@include high-contrast-background-transparent;
-					box-shadow: 0px 0px 0.1rem 0.1rem $high-contrast-black-cyan;
+					box-shadow: 0px 0px 0.1rem 0.1rem $dark;
 				}
 				@media #{$black-on-white} {
-					@include  high-contrast-white-text-color;
+					color: $light;
 					@include high-contrast-background-transparent;
-					box-shadow: 0px 0px 0.1rem 0.1rem $high-contrast-white-dark-magenta;
+					box-shadow: 0px 0px 0.1rem 0.1rem $light;
 				}
 			}
 			&:focus {
@@ -120,72 +127,68 @@
 			&:disabled {
 				@media #{$white-on-black} {
 					border: 0.1rem solid $light;
-					.icon-container{
-						background: $high-contrast-black-disabled;
+					.icon-container {
+						@include high-contrast-black-background-disabled;
 					}
-					background: $high-contrast-black-disabled;
+					@include high-contrast-black-background-disabled;
 				}
 				@media #{$black-on-white} {
 					border: 0.1rem solid $dark;
-					.icon-container{
-						background: $high-contrast-white-disabled;
+					.icon-container {
+						@include high-contrast-white-background-disabled;
 					}
-					background: $high-contrast-white-disabled;
+					@include high-contrast-white-background-disabled;
 				}
 			}
 		}
 
 		&.unchecked {
 			box-shadow: 0px 0px 0.1rem 0.1rem $shade_lighter;
-			background: linear-gradient($gradient_angle, $shade_lighter 0%, $light 100%);
+			background: linear-gradient(
+				$gradient_angle,
+				$shade_lighter 0%,
+				$light 100%
+			);
 			// outline: none;
-			@media #{$white-on-black} {
-				@include high-contrast-background-transparent;
-				box-shadow: 0px 0px 0.1rem 0.1rem $high-contrast-black-disabled-green;
-
-			}
-			@media #{$black-on-white} {
-				@include high-contrast-background-transparent;
-				box-shadow: 0px 0px 0.1rem 0.1rem $high-contrast-white-disabled-maroon;
-
-			}
-
 			@media #{$white-on-black} {
 				border: 0.1rem solid $light;
 				box-shadow: none;
-				background: $dark;
+				@include high-contrast-background-transparent;
+				box-shadow: none;
 			}
 			@media #{$black-on-white} {
 				border: 0.1rem solid $dark;
 				box-shadow: none;
-				background: $light;
+				@include high-contrast-background-transparent;
+				box-shadow: none;
 			}
 
 			.title {
 				color: $shade_darker;
 
 				@media #{$white-on-black} {
-					@include high-contrast-black-text-color-disabled;
-
-					}
-					@media #{$black-on-white} {
-						@include high-contrast-white-text-color-disabled;
-
-					}
+					color: $light;
+				}
+				@media #{$black-on-white} {
+					color: $dark;
+				}
 			}
 
 			.icon-container {
-				background: linear-gradient($gradient_angle_reverse, $shade_lighter 0%, $light 100%);
+				background: linear-gradient(
+					$gradient_angle_reverse,
+					$shade_lighter 0%,
+					$light 100%
+				);
 				color: $shade_darker;
 				@media #{$white-on-black} {
 					@include high-contrast-background-transparent;
-					@include high-contrast-black-text-color-disabled;
-
+					color: $light;
 				}
 				@media #{$black-on-white} {
 					@include high-contrast-background-transparent;
-					@include high-contrast-white-text-color-disabled;
-
+					color: $dark;
+					box-shadow: 0px 0px 0.1rem 0.1rem $dark;
 				}
 			}
 
@@ -198,24 +201,25 @@
 			&:disabled {
 				@media #{$white-on-black} {
 					.title {
-						color: $high-contrast-black-disabled;
+						@include high-contrast-black-text-color-disabled;
 					}
 					.switch-on-off .off-label {
-						color: $high-contrast-black-disabled;
+						@include high-contrast-black-text-color-disabled;
 					}
-					.icon-container{
-						color: $high-contrast-black-disabled !important;
+					.icon-container {
+						@include high-contrast-black-text-color-disabled;
 					}
 				}
 				@media #{$black-on-white} {
 					.title {
-						color: $high-contrast-white-disabled;
+						@include high-contrast-white-text-color-disabled;
 					}
 					.switch-on-off .off-label {
-						color: $high-contrast-white-disabled;
+						@include high-contrast-white-text-color-disabled;
 					}
-					.icon-container{
-						color: $high-contrast-white-disabled !important;
+					.icon-container {
+						@include high-contrast-white-text-color-disabled;
+						box-shadow: 0px 0px 0.1rem 0.1rem $dark;
 					}
 				}
 			}
@@ -308,22 +312,21 @@
 			.off-label {
 				color: $shade_darker;
 				@media #{$white-on-black} {
-					@include high-contrast-black-text-color-disabled;
-					}
-					@media #{$black-on-white} {
-						@include high-contrast-white-text-color-disabled;
-					}
+					color: $light;
+				}
+				@media #{$black-on-white} {
+					color: $dark;
+				}
 			}
-
 
 			.on-label {
 				color: $light;
 				@media #{$white-on-black} {
-					@include  high-contrast-black-text-color;
-					}
-					@media #{$black-on-white} {
-					@include high-contrast-white-text-color;
-					}
+					color: $dark;
+				}
+				@media #{$black-on-white} {
+					color: $light;
+				}
 			}
 			// @media #{$breakpoint_lg} {
 			// 	font-size: 2rem;
